# gat-xg

./: .gitignore  README.md  config.json  pyproject.toml
app/: data.py  train.py
app/classes/: AdaptiveGATv2Conv.py  GraphAttentionNetwork.py  GraphSoccerDataset.py  ProgressiveGAT.py  ProgressiveGraphSoccerDataset.py  __init__.py  dataset.py
app/utils/: __init__.py  dataset.py  visualization.py
