[project]
name = "progat-xg"
version = "0.1.0"
description = "Progressive Graph Attention Networks for Interpretable Expected Goals Analysis in Soccer"
authors = [
    {name = "Federico Gerardi",email = "federico.gerardi03@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "requests (>=2.32.4,<3.0.0)",
    "tqdm (>=4.0.0,<5.0.0)",
    "torch (>=2.7.1,<3.0.0)",
    "torch-geometric (>=2.6.1,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
